<resources>

    <string name="app_name">NeckCare</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">爱健康</string>

    <string name="idtxthint">用户名</string>
    <string name="pwdtxthint">密码</string>
    <string name="loginbtntext">登录</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="goto_register">注册</string>
    <string name="loading">正在登录</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="sample_service_started">样本数据正在采集……</string>
    <string name="sample_service_stopped">样本数据采集结束……</string>
    <string name="sample_service_label">正在采集样本数据……</string>

    <string name="local_service_started">服务正在运行中……</string>
    <string name="local_service_stopped">服务停止了……</string>
    <string name="local_service_label">正在测试中……</string>


    <string name="action_settings">Settings</string>
    <string name="invaild">无效人脸，舍弃.</string>
    <string name="vaild">有效人脸，保存.</string>
    <string name="finishDetect">检测完毕</string>
    <string name="image_w">待检测图像: w =</string>
    <string name="image_h">待检测图像: h =</string>
    <string name="face_w">人脸 宽w =</string>
    <string name="face_s">人脸 高度s =</string>
    <string name="face_h">人脸 面积h =</string>
    <string name="face_number">检测到人脸：n =</string>
    <string name="finishSave">保存完毕</string>
    <string name="left_eye">左眼坐标 x =</string>
    <string name="right_eye">右眼坐标 y =</string>

    <string name="take_sample">开始采样</string>
    <string name="sample_over">采样结束</string>




</resources>